# backend/src/blog/controllers/blog.controller.ts
@@ -1,0 +1,74 @@
+import { Body, Controller, Delete, Get, Param, Post, Put } from '@nestjs/common';
+import { PostDto } from '../dto/post.dto';
+import { UserDto } from '../dto/user.dto';
+import { PostService } from './post.service';
+import { UserService } from './user.service';
+
+@Controller()
+export class BlogController {
+  constructor(
+    private readonly userService: UserService,
+    private readonly postService: PostService,
+  ) {}
+
+  @Get('post/:id')
+  async getPostById(@Param('id') id: string): Promise<PostDto> {
+    console.log(id);
+    return this.postService.post({ id: Number(id) });
+  }
+
+  @Get('feed')
+  async getPublishedPosts(): Promise<PostDto[]> {
+    return this.postService.posts({
+      where: { published: true },
+    });
+  }
+
+  @Get('filtered-posts/:searchString')
+  async getFilteredPosts(@Param('searchString') searchString: string): Promise<PostDto[]> {
+    return this.postService.posts({
+      where: {
+        OR: [
+          {
+            title: { contains: searchString },
+          },
+          {
+            content: { contains: searchString },
+          },
+        ],
+      },
+    });
+  }
+
+  @Post('post')
+  async createDraft(
+    @Body() postData: { title: string; content?: string; authorEmail: string },
+  ): Promise<PostDto> {
+    const { title, content, authorEmail } = postData;
+    return this.postService.createPost({
+      title,
+      content,
+      author: {
+        connect: { email: authorEmail },
+      },
+    });
+  }
+
+  @Post('user')
+  async signupUser(@Body() userData: { name: string; email: string }): Promise<UserDto> {
+    return this.userService.createUser(userData);
+  }
+
+  @Put('publish/:id')
+  async publishPost(@Param('id') id: string): Promise<PostDto> {
+    return this.postService.updatePost({
+      where: { id: Number(id) },
+      data: { published: true },
+    });
+  }
+
+  @Delete('post/:id')
+  async deletePost(@Param('id') id: string): Promise<PostDto> {
+    return this.postService.deletePost({ id: Number(id) });
+  }
+}
