# backend/src/blog/dto/post.dto.ts
@@ -1,0 +1,9 @@
+import { UserDto } from './user.dto';
+
+export class PostDto {
+  id: number;
+  title: string;
+  content?: string;
+  published?: boolean;
+  author?: UserDto;
+}
